--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
     scroll-margin-top: 150px;
 }
 
+.headerScroll {
+    box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.5);
+}
+
 .shop_button::after {
     content: '';
     display: block;
